--- a/week-3-project-analysis.ipynb
+++ b/week-3-project-analysis.ipynb
@@ -474,9 +474,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = '...' # Foursquare ID\n",
-    "CLIENT_SECRET = '...' # Foursquare Secret\n",
-    "VERSION = '20180605' # API version"
+    "CLIENT_ID = '5RATQQQGIMFP3442Q4FCYCFNXKXB30ONI350XWPVVB1OOHWH' # Foursquare ID\n",
+    "CLIENT_SECRET = 'FMZ3BIKXMHULTE5FPSPOKRO1P2O5SLVYDD00HA0BJNGWLWUP' # Foursquare Secret\n",
+    "VERSION = '20180604' # API version"
    ]
   },
   {
